Ajustes acta de construccion

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/form-generar-acta-inicio-const-tecnico/form-generar-acta-inicio-const-tecnico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/form-generar-acta-inicio-const-tecnico/form-generar-acta-inicio-const-tecnico.component.html
@@ -239,6 +239,7 @@
                     type="number"
                     formControlName="mesPlazoEjFase2"
                     #mesPlazoEjFase2
+                    readonly
                   />
                 </mat-form-field>
                 <span
@@ -285,6 +286,7 @@
                     type="number"
                     formControlName="diasPlazoEjFase2"
                     #diasPlazoEjFase2
+                    readonly
                   />
                 </mat-form-field>
                 <span
