--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/dialog-cargar-acta-suscrita-const/dialog-cargar-acta-suscrita-const.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/dialog-cargar-acta-suscrita-const/dialog-cargar-acta-suscrita-const.component.html
@@ -128,6 +128,7 @@
               type="file"
               id="file"
               formControlName="documentoFile"
+              accept=".pdf"
             />
             <span class="required-form-group m-0">*</span>
           </div>
