--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/dialog-cargar-acta-suscrita-const/dialog-cargar-acta-suscrita-const.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/dialog-cargar-acta-suscrita-const/dialog-cargar-acta-suscrita-const.component.html
@@ -1,114 +1,57 @@
 <button mat-button mat-dialog-close class="modal--btn-cerrar">
-    <img src="assets/img/icon/cerrar-blanco.svg" alt="cerrar" />
-  </button>
-  <div style="padding: 30px 0px">
-    <h1 class="title-menu--h1 centerTrick">Cargar acta suscrita contrato {{ this.numContrato }}</h1>
-    <form [formGroup]="addressForm" (ngSubmit)="cargarActa()">
-      <div class="text-center">
-        <div class="mtop">
-          <div class="row">
-            <div class="col-md-12">
-              <div class="row">
-                <div class="pr-1">
-                  <label
-                    class="label-left"
-                    [class.color-secondaryColor]="
-                      (addressForm.get('numeroPerfiles')?.invalid && addressForm.get('numeroPerfiles').touched) ||
-                      (addressForm.get('numeroPerfiles')?.invalid && esRojo)
-                    "
-                  >
-                    {{ this.fecha1Titulo }}
-                  </label>
-                </div>
-                <div class="col d-flex">
-                  <mat-form-field class="example-full-width">
-                    <input
-                      matInput
-                      [matDatepicker]="picker"
-                      required
-                      [max]="maxDate"
-                      readonly
-                      (click)="picker.open()"
-                      formControlName="fechaFirmaContratistaObra"
-                      placeholder="DD/MM/AAAA"
-                    />
-                    <mat-datepicker #picker></mat-datepicker>
-                  </mat-form-field>
-                  <button mat-button color="primary" type="button" (click)="picker.open()" class="btn-calendario">
-                    <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario" />
-                  </button>
-                  <span class="icon-incompleto">
-                    <img
-                      class="icon-incompleto--img"
-                      src="assets/img/icon/incompleto.svg"
-                                    alt="este campo es requerido"
-                [matTooltipPosition]="'above'"
-                matTooltip="Debe ingresar la información en el campo para continuar"
-                matTooltipClass="info-tooltip"
-                      *ngIf="
-                        (addressForm.get('numeroPerfiles')?.invalid && addressForm.get('numeroPerfiles').touched) ||
-                        (addressForm.get('numeroPerfiles')?.invalid && esRojo)
-                      "
-                    />
-                  </span>
-                </div>
+  <img src="assets/img/icon/cerrar-blanco.svg" alt="cerrar" />
+</button>
+<div style="padding: 30px 0px">
+  <h1 class="title-menu--h1 centerTrick">Cargar acta suscrita contrato {{ this.numContrato }}</h1>
+  <form [formGroup]="addressForm" (ngSubmit)="cargarActa()">
+    <div class="text-center">
+      <div class="mtop">
+        <div class="row">
+          <div class="col-md-12" style="padding-left: 0;">
+            <div class="row">
+              <div class="pr-1">
+                <label class="label-left" for="fechaFirmaContratistaObra" [class.color-secondaryColor]="
+                      (addressForm.get('fechaFirmaContratistaObra')?.invalid &&
+                        addressForm.get('fechaFirmaContratistaObra').touched) ||
+                      (addressForm.get('fechaFirmaContratistaObra')?.invalid && esRojo)
+                    "> {{ this.fecha1Titulo }}</label>
+              </div>
+              <div class="col d-flex align-items-center">
+                <mat-form-field class="example-full-width">
+                  <input matInput formControlName="fechaFirmaContratistaObra"
+                    [matDatepicker]="pickerfechaFirmaContratistaObra" readonly
+                    (click)="pickerfechaFirmaContratistaObra.open()" required placeholder="DD/MM/AAAA">
+                  <mat-datepicker #pickerfechaFirmaContratistaObra></mat-datepicker>
+                </mat-form-field>
+                <button mat-button color="primary" type="button" (click)="pickerfechaFirmaContratistaObra.open()"
+                  class="btn-calendario" placeholder="DD/MM/AAAA">
+                  <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario">
+                </button>
               </div>
             </div>
           </div>
-          <div class="row">
-            <div class="col-md-12">
-              <div class="row">
-                <div class="pr-1">
-                  <label
-                    class="label-left"
-                    [class.color-secondaryColor]="
+        </div>
+        <div class="row">
+          <div class="col-md-12" style="padding-left: 0;">
+            <div class="row">
+              <div class="pr-1">
+                <label class="label-left" for="fechaFirmaContratistaInterventoria" [class.color-secondaryColor]="
                       (addressForm.get('fechaFirmaContratistaInterventoria')?.invalid &&
                         addressForm.get('fechaFirmaContratistaInterventoria').touched) ||
                       (addressForm.get('fechaFirmaContratistaInterventoria')?.invalid && esRojo)
-                    "
-                  >
-                    {{ this.fecha2Titulo }}
-                  </label>
-                </div>
-                <div class="col d-flex">
-                  <mat-form-field
-                    class="example-full-width"
-                    [ngStyle]="{
-                      width:
-                        this.fecha2Titulo == 'Fecha de la firma del documento por parte del supervisor' ? '20%' : '0%'
-                    }"
-                  >
-                    <input
-                      matInput
-                      [matDatepicker]="picker2"
-                      required
-                      [max]="maxDate2"
-                      readonly
-                      (click)="picker2.open()"
-                      formControlName="fechaFirmaContratistaInterventoria"
-                      placeholder="DD/MM/AAAA"
-                    />
-                    <mat-datepicker #picker2></mat-datepicker>
-                  </mat-form-field>
-                  <button mat-button color="primary" type="button" (click)="picker2.open()" class="btn-calendario">
-                    <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario" />
-                  </button>
-                  <span class="icon-incompleto">
-                    <img
-                      class="icon-incompleto--img"
-                      src="assets/img/icon/incompleto.svg"
-                                    alt="este campo es requerido"
-                [matTooltipPosition]="'above'"
-                matTooltip="Debe ingresar la información en el campo para continuar"
-                matTooltipClass="info-tooltip"
-                      *ngIf="
-                        (addressForm.get('fechaFirmaContratistaInterventoria')?.invalid &&
-                          addressForm.get('fechaFirmaContratistaInterventoria').touched) ||
-                        (addressForm.get('fechaFirmaContratistaInterventoria')?.invalid && esRojo)
-                      "
-                    />
-                  </span>
-                </div>
+                    ">  {{ this.fecha2Titulo }}</label>
+              </div>
+              <div class="col d-flex align-items-center">
+                <mat-form-field class="example-full-width">
+                  <input matInput formControlName="fechaFirmaContratistaInterventoria"
+                    [matDatepicker]="pickerfechaFirmaContratistaInterventoria" readonly
+                    (click)="pickerfechaFirmaContratistaInterventoria.open()" required placeholder="DD/MM/AAAA">
+                  <mat-datepicker #pickerfechaFirmaContratistaInterventoria></mat-datepicker>
+                </mat-form-field>
+                <button mat-button color="primary" type="button" (click)="pickerfechaFirmaContratistaInterventoria.open()"
+                  class="btn-calendario" placeholder="DD/MM/AAAA">
+                  <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario">
+                </button>
               </div>
             </div>
           </div>
@@ -138,9 +81,25 @@
           </p>
           <button mat-raised-button color="accent" [disabled]="!addressForm.valid" type="submit">{{ boton }}</button>
         </div>
+        <div class="input-file"
+          [ngStyle]="{ color: this.archivo == undefined && this.esRojo == true ? '#d21e18' : '#174193' }">
+          <span class="input-file--text">{{ archivo }}</span>
+          <button mat-raised-button color="primary" type="button" (click)="fileInput.click()" class="input-file--btn">
+            Explorar
+          </button>
+          <input required hidden (change)="fileName($event)" #fileInput type="file" id="file"
+            formControlName="documentoFile" />
+          <span class="required-form-group m-0">*</span>
+        </div>
+        <p>
+          Explore en su computador o dispositivo y seleccione el documento que desea cargar los formatos permitidos son:
+          pdf
+        </p>
+        <button mat-raised-button color="accent" [disabled]="!addressForm.valid" type="submit">{{ boton }}</button>
       </div>
-    </form>
-  </div>
+    </div>
+  </form>
+</div>
 <!--
     De respaldo (dbenitez)
     <div style="padding: 30px 0px;">
@@ -203,7 +162,55 @@
     </div>
 </div>
 -->
-
-
-
-
+        <!--
+          Por si algo hay que ajustar
+          <div class="row">
+            <div class="col-md-12">
+              <div class="row">
+                <div class="pr-1">
+                  <label
+                    class="label-left"
+                    [class.color-secondaryColor]="
+                      (addressForm.get('numeroPerfiles')?.invalid && addressForm.get('numeroPerfiles').touched) ||
+                      (addressForm.get('numeroPerfiles')?.invalid && esRojo)
+                    "
+                  >
+                    {{ this.fecha1Titulo }}
+                  </label>
+                </div>
+                <div class="col d-flex">
+                  <mat-form-field class="example-full-width">
+                    <input
+                      matInput
+                      [matDatepicker]="picker"
+                      required
+                      [max]="maxDate"
+                      readonly
+                      (click)="picker.open()"
+                      formControlName="fechaFirmaContratistaObra"
+                      placeholder="DD/MM/AAAA"
+                    />
+                    <mat-datepicker #picker></mat-datepicker>
+                  </mat-form-field>
+                  <button mat-button color="primary" type="button" (click)="picker.open()" class="btn-calendario">
+                    <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario" />
+                  </button>
+                  <span class="icon-incompleto">
+                    <img
+                      class="icon-incompleto--img"
+                      src="assets/img/icon/incompleto.svg"
+                                    alt="este campo es requerido"
+                [matTooltipPosition]="'above'"
+                matTooltip="Debe ingresar la información en el campo para continuar"
+                matTooltipClass="info-tooltip"
+                      *ngIf="
+                        (addressForm.get('numeroPerfiles')?.invalid && addressForm.get('numeroPerfiles').touched) ||
+                        (addressForm.get('numeroPerfiles')?.invalid && esRojo)
+                      "
+                    />
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        -->
