--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/cargar-acta-suscrita-acta-ini-f-i-prc/cargar-acta-suscrita-acta-ini-f-i-prc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/cargar-acta-suscrita-acta-ini-f-i-prc/cargar-acta-suscrita-acta-ini-f-i-prc.component.html
@@ -59,8 +59,9 @@
         <div
           class="input-file"
           [ngStyle]="{ color: this.archivo == undefined && this.esRojo == true ? '#d21e18' : '#174193' }"
+          style="width: 100%;"
         >
-          <span class="input-file--text">{{ archivo }}</span>
+          <span class="input-file--text"  style="width: 100%; max-width: 100%;">{{ archivo }}</span>
           <button mat-raised-button color="primary" type="button" (click)="fileInput.click()" class="input-file--btn">
             Explorar
           </button>
