--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/cargar-acta-suscrita-acta-ini-f-i-prc/cargar-acta-suscrita-acta-ini-f-i-prc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/cargar-acta-suscrita-acta-ini-f-i-prc/cargar-acta-suscrita-acta-ini-f-i-prc.component.html
@@ -28,6 +28,20 @@
                   <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario">
                 </button>
               </div>
+              <span class="icon-incompleto">
+                <img
+                  class="icon-incompleto--img"
+                  src="assets/img/icon/incompleto.svg"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
+                  *ngIf="
+                    (addressForm.get('fechaFirmaContratistaObra').invalid && addressForm.get('fechaFirmaContratistaObra').touched) ||
+                    (addressForm.get('fechaFirmaContratistaObra').invalid && estaEditando)
+                  "
+                />
+              </span>
             </div>
           </div>
         </div>
@@ -53,6 +67,20 @@
                   <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario">
                 </button>
               </div>
+              <span class="icon-incompleto">
+                <img
+                  class="icon-incompleto--img"
+                  src="assets/img/icon/incompleto.svg"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
+                  *ngIf="
+                    (addressForm.get('fechaFirmaContratistaInterventoria').invalid && addressForm.get('fechaFirmaContratistaInterventoria').touched) ||
+                    (addressForm.get('fechaFirmaContratistaInterventoria').invalid && estaEditando)
+                  "
+                />
+              </span>
             </div>
           </div>
         </div>
