--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-contratos-asociados-dj/form-contratos-asociados-dj.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-contratos-asociados-dj/form-contratos-asociados-dj.component.html
@@ -27,7 +27,7 @@
                                 </div>
                                 <div class="col d-flex">
                                     <mat-form-field class="full-width">
-                                        <input matInput #nombre type="text" [formControl]="myFilter" maxlength="100" required
+                                        <input matInput #nombre type="text" [formControl]="myControl.controls[i]" maxlength="100" required
                                             [matAutocomplete]="auto">
                                         <mat-autocomplete #auto="matAutocomplete">
                                             <mat-option (click)="seleccionAutocomplete(nombres,i)"
@@ -46,7 +46,7 @@
                     </div>
                 </mat-card-content>
             </mat-card>
-            <div *ngIf="myFilter.value">
+            <div *ngIf="myControl.controls[i].value">
                 <div style="margin-top: 1em;">
                     Seleccione la(s) Institución(es) Educativa(s), sede(s) asociada(s) al proceso
                 </div>
