--- a/asivamosffie.web/asivamosffie/src/app/_pages/requisitos-tecnicos-construccion/components/dialog-observaciones-programacion/dialog-observaciones-programacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/requisitos-tecnicos-construccion/components/dialog-observaciones-programacion/dialog-observaciones-programacion.component.html
@@ -16,7 +16,7 @@
 
   <form autocomplete="off" [formGroup]="formObservacion" (ngSubmit)="guardar()">
 
-    <div class="d-flex align-items-center mt-1em">
+    <div class="d-flex align-items-center mt-1em" *ngIf="data.ocultarBoton != true">
       <div class="text-area-quill">
         <label for="observaciones" class="text-area-quill--label size-label colorMainColor">
           Observaciones
@@ -30,7 +30,22 @@
       </span>
       <span class="contador miles" *ngIf="formObservacion.get('observaciones').value === null">
         3000
-      </span>
+      </span> 
+    </div>
+
+    <div align="center" *ngIf="data.ocultarBoton == true">
+      <mat-card class="border mt-2em">
+        <mat-card-header class="header-card">
+          <mat-card-title class="header-card--text grayTitle">
+            Observaciones
+          </mat-card-title>
+        </mat-card-header>
+        <mat-card-content align="left">
+          <section style="margin-left: 2em;">
+            <div [innerHTML]="formObservacion.value.observaciones"></div>
+          </section>
+        </mat-card-content>
+      </mat-card>
     </div>
 
     <div class="text-center">
