--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/revision-acta/revision-acta.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/revision-acta/revision-acta.component.html
@@ -60,7 +60,7 @@
               *ngIf="sesionComite.tipoSolicitudCodigo === tipoSolicitudCodigo.modificacionContractual"
             >
               <mat-panel-title class="expansion-style--title sub-expansion">
-                <b>Solicitud {{ sesionComite.novedadContractual.numeroSolicitud }} </b>
+                <b>Solicitud {{ sesionComite.novedadContractual !== undefined ? sesionComite.novedadContractual.numeroSolicitud : sesionComite.numeroSolicitud }} </b>
               </mat-panel-title>
             </mat-expansion-panel-header>
               <mat-expansion-panel-header
@@ -68,7 +68,7 @@
                 *ngIf="sesionComite.tipoSolicitudCodigo === tipoSolicitudCodigo.controversiaContractual"
               >
                 <mat-panel-title class="expansion-style--title sub-expansion">
-                  <b>Solicitud {{ sesionComite.controversiaContractual.numeroSolicitud }} </b>
+                  <b>Solicitud {{ sesionComite.controversiaContractual !== undefined ? sesionComite.controversiaContractual.numeroSolicitud : sesionComite.numeroSolicitud }} </b>
                 </mat-panel-title>
               </mat-expansion-panel-header>
 
