--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/tabla-verificar-avance-semanal/tabla-verificar-avance-semanal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/tabla-verificar-avance-semanal/tabla-verificar-avance-semanal.component.html
@@ -18,7 +18,7 @@
 
     <ng-container matColumnDef="fechaReporte">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha del reporte </th>
-        <td mat-cell *matCellDef="let element" align="center"> <b> {{ element.fechaReporte | date: 'dd/MM/yyyy' }} </b> </td>
+        <td mat-cell *matCellDef="let element" align="center"> {{ element.fechaReporte | date: 'dd/MM/yyyy' }} </td>
     </ng-container>
 
     <ng-container matColumnDef="llaveMen">
