--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/tabla-validar-avance-semanal/tabla-validar-avance-semanal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/tabla-validar-avance-semanal/tabla-validar-avance-semanal.component.html
@@ -11,9 +11,14 @@
 <section class="table-responsive">
     <table mat-table [dataSource]="tablaRegistro" matSort>
 
+        <ng-container matColumnDef="semanaReporte">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Semana número </th>
+            <td mat-cell *matCellDef="let element" align="center"> <b> {{ element.numeroSemana }} - {{ element.cantidadSemanas }} </b> </td>
+        </ng-container>
+
         <ng-container matColumnDef="fechaReporte">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha del reporte </th>
-            <td mat-cell *matCellDef="let element" align="center"> <b> {{ element.fechaReporte | date: 'dd/MM/yyyy' }} </b> </td>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element.fechaReporte | date: 'dd/MM/yyyy' }} </td>
         </ng-container>
 
         <ng-container matColumnDef="llaveMen">
