--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/dialog-tipo-documento/dialog-tipo-documento.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/dialog-tipo-documento/dialog-tipo-documento.component.html
@@ -13,7 +13,7 @@
   </p>
   <p>
     <b> {{ data.informe.posicion }}. </b>
-    {{ data.informe.nombre }} {{ data.verDetalle }}
+    {{ data.informe.nombre }}
   </p>
 </div>
 
