--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -10,8 +10,7 @@
       <mat-expansion-panel-header class="expansion-style--header">
         <mat-panel-title class="expansion-style--title 
         {{estadoAprobacion === '0' || estadoAprobacion == null || semaforo ? 
-          'sin-diligenciar' : estadoAprobacion === '1' || estadoAprobacion === '3' ? 
-                'en-proceso' : 'completo' }}">
+          'sin-diligenciar' : 'completo' }}">
                 Informe final y anexos
         </mat-panel-title>
       </mat-expansion-panel-header>
