--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/validar-requerimientos-liquidaciones/validar-requerimientos-liquidaciones.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/validar-requerimientos-liquidaciones/validar-requerimientos-liquidaciones.component.html
@@ -57,7 +57,7 @@
             Actualización de póliza
           </mat-panel-title>
         </mat-expansion-panel-header>
-        Actualización de póliza
+        <app-actualizacion-poliza></app-actualizacion-poliza>
       </mat-expansion-panel>
       <mat-expansion-panel class="expansion-style">
         <mat-expansion-panel-header class="expansion-style--header">
@@ -70,7 +70,7 @@
             Balance financiero
           </mat-panel-title>
         </mat-expansion-panel-header>
-        Balance financiero
+        <app-tabla-balance-financiero></app-tabla-balance-financiero>
       </mat-expansion-panel>
       <mat-expansion-panel class="expansion-style">
         <mat-expansion-panel-header class="expansion-style--header">
