--- a/asivamosffie.web/asivamosffie/src/assets/scss/_tables.scss
+++ b/asivamosffie.web/asivamosffie/src/assets/scss/_tables.scss
@@ -279,6 +279,14 @@ div.mat-paginator {
       margin-right: auto;
     }
   }
+
+  &--info {
+    border-spacing: 0;
+    text-align: center;
+    td.mat-cell {
+      padding: .6em !important;
+    }
+  }
 }
 
 .mat-paginator-container {
